--- a/README
+++ b/README
@@ -1,16 +1,9 @@
-Tk-FreeDesktop-Wm version 0.01
-==============================
+Tk-FreeDesktop-Wm
+=================
 
-The README is used to introduce the module and provide instructions on
-how to install the module, any machine dependencies it may have (for
-example C compilers and installed libraries) and any other information
-that should be provided before the module is installed.
-
-A README file is required for CPAN modules since CPAN extracts the
-README file from a module distribution so that people browsing the
-archive can use it get an idea of the modules uses. It is usually a
-good idea to provide version information here so that people can
-decide whether fixes for the module are worth downloading.
+Tk::FreeDesktop::WM creates a bridge between freedesktop-compliant
+window managers (see http://www.freedesktop.org/ ) and Perl/Tk
+programs, providing information and manipulation methods.
 
 INSTALLATION
 
@@ -23,15 +16,13 @@ To install this module type the following:
 
 DEPENDENCIES
 
-This module requires these other modules and libraries:
+This module requires these other modules:
 
-  blah blah blah
+  Tk
 
 COPYRIGHT AND LICENCE
 
-Put the correct copyright and licence information here.
-
-Copyright (C) 2006 by A. U. Thor
+Copyright (C) 2006,2015 by Slaven Rezic
 
 This library is free software; you can redistribute it and/or modify
 it under the same terms as Perl itself, either Perl version 5.8.8 or,
