--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 Revision history for Perl extension Tk::FreeDesktop::Wm.
 
+0.04  2015-05-10
+	- added a missing binmode() call
+
 0.03  2015-05-09
 	- set_wm_icon workaround with Imager
 
